# asx-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
benches/: as4_streaming_vs_buffer.rs  auth_telemetry_cache_behavior.rs  event_bus_emission_modes.rs  incident_runtime_burst.rs  spool_headroom_hygiene.rs
docs/: architecture.md  as2.md  as4.md  benchmark-baseline-2026-05-21.md  getting-started.md  incident-channel-companion-guidance.md  interop.md  observability.md  perf-baseline.txt  persistence-howto.md  release.md  reliability.md  security.md  testing.md  transport.md
scripts/: check_as4_strict_deprecations.sh  check_docs_drift.sh  check_profile_coverage.sh  check_spool_hygiene_bench.sh  check_test_quarantine.sh  release_gate.sh  run_fuzz_gate.sh  run_interop_matrix.sh  run_wssec_vector_gate.sh
src/: alerting.rs  as2.rs  core.rs  credentials.rs  crypto.rs  fixtures.rs  http.rs  interop.rs  lib.rs  lifecycle.rs  matrix.rs  observability.rs  presets.rs  reliability.rs  sbdh.rs  send_pipeline.rs  smp.rs  time_utils.rs  wire.rs
src/as2/: auth_telemetry.rs  ingress.rs  mdn.rs  mic.rs  send_path.rs  spool_http_helpers.rs  spool_key_provider.rs  spool_policy.rs  spool_provider_backends.rs  spool_runtime_utils.rs  stream_receive.rs  tests.rs  trust.rs  types.rs
src/as4/: conversation_gate.rs  coordination.rs  large_message.rs  mime_packaging.rs  mock_endpoint.rs  mod.rs  parser.rs  pmode.rs  pull.rs  pull_store.rs  receive.rs  send.rs  send_mime.rs  services.rs  signals.rs  stream.rs  test_service.rs  types.rs
src/as4/receive/: async_bridge.rs  async_completion.rs  entrypoints.rs  metadata.rs  ordered.rs  ordered_async.rs  payload.rs  (+7 more)
src/crypto/: as2_smime.rs  compression.rs  ocsp_client.rs  ocsp_discovery.rs  signing.rs  soap_builder.rs
src/incident_channels/: file_spool.rs  http.rs  mod.rs
src/interop/: tests.rs
src/observability/: alerts.rs  audit_persistence.rs  audit_runtime.rs  audit_sink.rs  construction.rs  construction_api.rs  emission_policy.rs  emission_runtime.rs  event_taxonomy.rs  metric_names.rs  metrics_analysis.rs  metrics_observation.rs  opentelemetry.rs  prometheus.rs  scoped_subscriptions.rs  session_subscriptions.rs  sink_forwarding.rs  tests.rs
src/storage/: memory.rs  mod.rs
src/transport/: egress.rs  ingress.rs  mod.rs  server.rs  trace_context.rs
src/wire/: spooling.rs
tests/: as2_receive_mdn.rs  as2_send_golden.rs  as4_ebms_adversarial.rs  as4_pull_flow.rs  as4_push_flow.rs  as4_transport_ingress_helpers.rs  fuzz_protocol_ingress.rs  interop_coverage_edges.rs  interop_guardrails.rs  interop_relaxed_scoping.rs  interop_strict_baseline.rs  partner_profile_overlays.rs  pkix_revocation_vectors.rs  profile_diff_impact.rs  profile_property_invariants.rs  property_protocol_invariants.rs  proptest_protocol_generation.rs  regional_profile_packs.rs  session_isolation_concurrency.rs  strict_production_startup.rs  wssec_c14n_vectors.rs  wssec_strict_matrix.rs  xmlenc_streaming_metrics.rs
tests/common/: as2_verifier.rs  as2_verifier_fixture.rs  as4_adversarial.rs  as4_push.rs
tests/fixtures/: as2_mdn_async_pending.golden  as2_mdn_malformed_boundary.golden  as2_mdn_partner_quirk_case.golden  as2_mdn_sync_ok.golden  as2_send_mic.golden  as2_send_payload.golden  as4_pull_user_message.golden  as4_push_signed_receipt.golden  as4_push_user_message.golden
xtask/: Cargo.toml
xtask/src/: fixture_repo_validate.rs  fuzz_gate.rs  interop_matrix.rs  main.rs  perf_gate.rs  profile_coverage_gate.rs  profile_diff_gate.rs  profile_lint_gate.rs  wssec_vector_gate.rs
(+35 files in other folders)
