[package]
name = "asx-rs"
version = "0.10.0"
edition = "2024"
authors = ["hupe1980"]
description = "AS2 and AS4 B2B messaging library for Rust — signing, encryption, MDN, and ebMS3/AS4 profile support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hupe1980/asx"
readme = "README.md"

[workspace]
members = ["xtask"]
default-members = ["."]

[features]
default = ["interop-strict", "async-ocsp", "compression", "trace"]
## Shared OpenSSL crypto gate. Pulled in by `as2`, `as4`, and `async-ocsp`.
## Enables RSA/ECDSA signing, X.509 parsing, CMS/PKCS#7, and OCSP support.
crypto = ["dep:openssl"]
as2 = ["crypto"]
as4 = ["crypto", "dep:quick-xml", "dep:roxmltree", "dep:aes-gcm"]
client = ["dep:reqwest"]
server = ["dep:axum"]
interop-strict = []
interop-relaxed = []
compression = ["dep:flate2"]
trace = []
prometheus = []
opentelemetry = ["dep:opentelemetry-api"]
async-ocsp = ["dep:reqwest", "crypto"]
testing = []

[dependencies]
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util"] }
tokio-stream = "0.1"
sha2 = { version = "0.11", features = ["oid"] }
hmac = "0.13"
base64 = "0.22"
mailparse = "0.16"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
x509-parser = "0.18"
openssl = { version = "0.10", optional = true }
aes-gcm = { version = "0.11", optional = true }
flate2 = { version = "1", optional = true }
reqwest = { version = ">=0.13, <0.14", default-features = false, features = ["json", "rustls", "rustls-native-certs", "http2"], optional = true }
axum = { version = ">=0.8, <0.9", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
parking_lot = "0.12"
lru = "0.18"
memchr = "2"
libc = "0.2"
getrandom = "0.3"
zeroize = "1"
subtle = "2"
bytes = "1"
quick-xml = { version = "0.41", optional = true }
roxmltree = { version = "0.21", optional = true }
opentelemetry-api = { package = "opentelemetry", version = "0.32", default-features = false, features = ["metrics"], optional = true }
smallvec = "1"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports"] }
opentelemetry-sdk = { package = "opentelemetry_sdk", version = "0.32", default-features = false, features = ["metrics"] }

[[bench]]
name = "as4_streaming_vs_buffer"
harness = false
required-features = ["as4"]

[[bench]]
name = "event_bus_emission_modes"
harness = false

[[bench]]
name = "incident_runtime_burst"
harness = false
required-features = ["client"]

[[bench]]
name = "auth_telemetry_cache_behavior"
harness = false
required-features = ["client", "as2"]

[[bench]]
name = "spool_headroom_hygiene"
harness = false
required-features = ["as4"]

